2005-11-16  Wim Taymans  <wim@fluendo.com>

	* examples/seeking/seek.c: (send_event), (do_seek),
	(loop_toggle_cb), (segment_done), (main):
	Added looping checkbox.

2005-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_typefind),
	(gst_ogg_demux_init):
	* ext/vorbis/vorbisdec.c: (gst_vorbis_dec_base_init),
	(gst_vorbis_dec_init):
	  revert unrefs, they don't pass make check

2005-11-15  Johan Dahlin  <johan@gnome.org>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_typefind),
	(gst_ogg_demux_init), (gst_ogg_demux_finalize):
	* ext/vorbis/vorbisdec.c: (gst_vorbis_dec_base_init),
	(gst_vorbis_dec_init):
	Fix pad template leaks.	

2005-11-15  Tim-Philipp Müller  <tim at centricular dot net>

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_change_state):
	  Make state change function thread safe.

2005-11-15  Edward Hervey  <edward@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_receive_event),
	(gst_ogg_demux_class_init):
	Implement GstElement::send_event, so we can send seek events
	in GST_STATE_READY

2005-11-14  Julien MOUTTE  <julien@moutte.net>

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xwindow_new):
	Discovered how to take away flickering while resizing the
	window. Please don't put that in ximagesink, refactoring in
	progress.

2005-11-14  Michael Smith <msmith@fluendo.com>

	* gst/tcp/gstmultifdsink.c: (gst_multifdsink_client_queue_data),
	(gst_multifdsink_render):
	  Don't leak GDP headers when using GDP mode (i.e. tcpserversink).

2005-11-14  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gstplaybin.c: (gen_audio_element):
	  Use autoaudiosink, it tends to be more widely available than
	  autoaudiiosink.
	  
2005-11-14  Andy Wingo  <wingo@pobox.com>

	* gst/playback/gstplaybin.c (gen_audio_element): Use autoaudiosink
	as well if it is available. Fixes #316442.

2005-11-14  Michael Smith <msmith@fluendo.com>

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_clear), (gst_ogg_mux_init),